# rocket_auth

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: tokio_postgres.rs
src/: cookies.rs  error.rs  lib.rs  tests.rs
src/db/: mod.rs
src/db/mysql/: mod.rs  sql.rs
src/db/postgres/: mod.rs  sql.rs
src/db/sqlite/: mod.rs  sql.rs
src/db/tokio_postgres/: mod.rs  sql.rs
src/forms/: mod.rs
src/session/: mod.rs
src/session/default/: mod.rs
src/session/redis/: mod.rs
src/user/: auth.rs  mod.rs  user_impl.rs  users.rs
