[package]
authors = ["tvallotton@uc.cl"]
description = "A high level authentication management library for Rocket applications. It supports both SQLite and Postgres."
edition = "2018"
license = "MIT or Apache-2.0"
name = "rocket_auth"
repository = "https://github.com/tvallotton/rocket_auth"
version = "0.5.0"

categories = ["web-programming"]
keywords = ["rocket", "users", "authentication", "auth", "session"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
sqlx-mysql = ["sqlx/mysql"]
sqlx-postgres = ["sqlx/postgres"]
sqlx-sqlite = ["sqlx/sqlite"]

[dependencies.rusqlite]
features = ["uuid"]
optional = true
version = "^0.27.0"

[dependencies]
async-trait = "0.1.56"
chashmap = "2.2.2"
chrono = "0.4.19"
fehler = "1.0.0"
futures = "0.3.21"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.5.6"
rust-argon2 = "1.0.0"
serde_json = "1.0.82"
thiserror = "1.0.31"
uuid = {version = "1.4.0", features = ["v4", "serde"]}
validator = {version = "0.15.0", features = ["derive"]}

[dependencies.sqlx]
features = ["uuid"]
optional = true
version = "0.6.0"

[dependencies.rocket]
features = ["secrets"]
version = "0.5.0-rc.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.138"

[dependencies.tokio-postgres]
features = ["with-uuid-0_8"]
version = "0.7.8"

[dependencies.redis]
features = ["aio", "tokio-comp"]
optional = true
version = "0.21.5"

[dependencies.tokio]
features = ["rt", "rt-multi-thread", "macros"]
version = "1.19.2"

[dev-dependencies]
tokio-postgres = "0.7.6"

[dev-dependencies.rocket]
features = ["secrets", "json"]
version = "0.5.0-rc.2"

[dev-dependencies.redis]
features = ["aio", "tokio-comp"]
version = "0.21.5"

[dev-dependencies.rocket_dyn_templates]
features = ["tera"]
version = "0.1.0-rc.2"

[dev-dependencies.sqlx]
features = ["runtime-tokio-rustls"]
version = "0.6.0"

[dev-dependencies.rocket_auth]
features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "sqlx-mysql",
  "redis", # "tokio-postgres",
  "rusqlite",
]
path = "../rocket_auth"
